; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_acpi.c_nouveau_dsm_pci_probe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_acpi.c_nouveau_dsm_pci_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.pci_dev = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"_DSM\00", align 1
@nouveau_dsm = common dso_local global i32 0, align 4
@NOUVEAU_DSM_POWER = common dso_local global i32 0, align 4
@NOUVEAU_DSM_HAS_MUX = common dso_local global i32 0, align 4
@nouveau_optimus_dsm = common dso_local global i32 0, align 4
@NOUVEAU_DSM_OPTIMUS_FN = common dso_local global i32 0, align 4
@NOUVEAU_DSM_HAS_OPT = common dso_local global i32 0, align 4
@nouveau_dsm_priv = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_dev*)* @nouveau_dsm_pci_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nouveau_dsm_pci_probe(%struct.pci_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pci_dev* %0, %struct.pci_dev** %3, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %9 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %8, i32 0, i32 0
  %10 = call i64 @DEVICE_ACPI_HANDLE(i32* %9)
  store i64 %10, i64* %4, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %48

14:                                               ; preds = %1
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @acpi_get_handle(i64 %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64* %5)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i64 @ACPI_FAILURE(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %48

21:                                               ; preds = %14
  %22 = load i64, i64* %4, align 8
  %23 = load i32, i32* @nouveau_dsm, align 4
  %24 = load i32, i32* @NOUVEAU_DSM_POWER, align 4
  %25 = call i64 @nouveau_test_dsm(i64 %22, i32 %23, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %21
  %28 = load i32, i32* @NOUVEAU_DSM_HAS_MUX, align 4
  %29 = load i32, i32* %7, align 4
  %30 = or i32 %29, %28
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %27, %21
  %32 = load i64, i64* %4, align 8
  %33 = load i32, i32* @nouveau_optimus_dsm, align 4
  %34 = load i32, i32* @NOUVEAU_DSM_OPTIMUS_FN, align 4
  %35 = call i64 @nouveau_test_dsm(i64 %32, i32 %33, i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %41

37:                                               ; preds = %31
  %38 = load i32, i32* @NOUVEAU_DSM_HAS_OPT, align 4
  %39 = load i32, i32* %7, align 4
  %40 = or i32 %39, %38
  store i32 %40, i32* %7, align 4
  br label %41

41:                                               ; preds = %37, %31
  %42 = load i32, i32* %7, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %41
  %45 = load i64, i64* %4, align 8
  store i64 %45, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nouveau_dsm_priv, i32 0, i32 0), align 8
  br label %46

46:                                               ; preds = %44, %41
  %47 = load i32, i32* %7, align 4
  store i32 %47, i32* %2, align 4
  br label %48

48:                                               ; preds = %46, %20, %13
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i64 @DEVICE_ACPI_HANDLE(i32*) #1

declare dso_local i32 @acpi_get_handle(i64, i8*, i64*) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i64 @nouveau_test_dsm(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
